C++/String/compiling_error.txt
/Users/Roger/Downloads/Melbourne UNI/2017/COMP90038/Project/C++/String/string_util.hpp:17:18: warning: template argument uses local type 'Key' [-Wlocal-type-template-args]
  priority_queue<Key> pq;
                 ^~~
/Users/Roger/Downloads/Melbourne UNI/2017/COMP90038/Project/C++/String/string_util.hpp:19:13: error: no matching constructor for initialization of 'Key'
    pq.push(Key(s[i],1));
            ^   ~~~~~~
/Users/Roger/Downloads/Melbourne UNI/2017/COMP90038/Project/C++/String/string_util.hpp:13:10: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
  struct Key{
         ^
/Users/Roger/Downloads/Melbourne UNI/2017/COMP90038/Project/C++/String/string_util.hpp:13:10: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 2 were provided
1 warning and 1 error generated.
